# OS_Lab1_Linux

script/: script_for_lab3.sh
script/Main/: main  main.cpp
script/Number/: Number.h
script/Vector/: Vector.cpp  Vector.h
untitled1/: CMakeLists.txt  Number.cpp
untitled2/: CMakeLists.txt  Vector.cpp  Vector.h
untitled3/: CMakeLists.txt
